alignment fix video

--- a/scss/page/knowledge-detail.scss
+++ b/scss/page/knowledge-detail.scss
@@ -113,4 +113,9 @@
 			height: auto;
 		}
 	}
+	.wp-video {
+		width: auto !important;
+
+		video { max-width: 100%; }
+	}
 }
